--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,15 @@
-title: cd-sebento-appinv-2
+title: Intermediate App Inventor
 hero_image: images/banner.png
-description: cd-sebento-appinv-2 description
-version: 4
+description: Make an app that lets you track how much exercise you've done
+version: 1
 listed: false
 copyedit: false
-last_tested: "2018-05-08"
+last_tested: "2018-04-30"
 steps:
   - title: Introduction
   - title: What you will need
-  - title: Step title
+  - title: Recording exercise
+  - title: Calculate the total
+  - title: Saving the information
+  - title: Reset
+  - title: Record a message!
