--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
 version: 1
 listed: false
-copyedit: false
+copyedit: true
 last_tested: "2018-04-30"
 steps:
   - title: Introduction
