--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,7 @@
 title: Intermediate App Inventor Sushi Cards
 hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
+theme: green
 version: 1
 listed: false
 copyedit: true
