--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
 theme: green
 version: 1
-listed: false
+listed: true
 copyedit: true
 last_tested: "2018-04-30"
 steps:
