--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,9 +2,15 @@ title: Intermediate App Inventor Sushi Cards
 hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
 theme: green
-version: 1
 listed: true
 copyedit: true
+curriculum: ''
+interests: ''
+technologies: ''
+site_areas: coderdojo, projects
+hardware: ''
+software: ''
+version: 3.0.0
 last_tested: "2018-04-30"
 steps:
   - title: Introduction
