--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Intermediate App Inventor Sushi Cards for Social Innovation
+title: Exercise tracker
 hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
 theme: green
