--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -12,12 +12,14 @@ site_areas: coderdojo, projects
 hardware: ''
 software: ''
 version: 3.0.0
-last_tested: "2018-04-30"
+last_tested: '2018-04-30'
 steps:
-  - title: Εισαγωγή
-  - title: Καταγραφή άσκησης
-  - title: Υπολογισμός του συνόλου
-  - title: Αποθήκευση των πληροφοριών
-  - title: Επαναφορά
-  - title: Καταγραφή μηνύματος!
-  - title: Εμφάνιση του ιστορικού άσκησης
+- title: Εισαγωγή
+  completion: engaged
+- title: Καταγραφή άσκησης
+- title: Υπολογισμός του συνόλου
+- title: Αποθήκευση των πληροφοριών
+- title: Επαναφορά
+- title: Καταγραφή μηνύματος!
+  completion: internal
+- title: Εμφάνιση του ιστορικού άσκησης
