--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -12,12 +12,16 @@ site_areas: coderdojo, projects
 hardware: ''
 software: ''
 version: 3.0.0
-last_tested: "2018-04-30"
+last_tested: '2018-04-30'
 steps:
-  - title: المقدمة
-  - title: تسجيل التمرين
-  - title: حساب المجموع
-  - title: حفظ المعلومات
-  - title: إعادة الوضع السابق
-  - title: تسجيل رسالة!
-  - title: عرض تاريخ التمرين
+- title: المقدمة
+- title: تسجيل التمرين
+- title: حساب المجموع
+  completion:
+  - engaged
+- title: حفظ المعلومات
+- title: إعادة الوضع السابق
+- title: تسجيل رسالة!
+- title: عرض تاريخ التمرين
+  completion:
+  - internal
