--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -15,11 +15,13 @@ version: 3.0.0
 last_tested: '2018-04-30'
 steps:
 - title: المقدمة
-  completion: engaged
 - title: تسجيل التمرين
 - title: حساب المجموع
+  completion:
+  - engaged
 - title: حفظ المعلومات
 - title: إعادة الوضع السابق
 - title: تسجيل رسالة!
-  completion: internal
 - title: عرض تاريخ التمرين
+  completion:
+  - internal
