--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ title: Exercise tracker
 hero_image: images/banner.png
 description: Make an app that tracks how much exercise you do
 theme: green
-listed: true
+listed: false
 copyedit: true
 curriculum: ''
 interests: ''
